# pipe-crud

./: .gitignore  pyproject.toml
app/: __main__.py
app/adapters/: repository.py
app/application/: uow.py  usecases.py
app/domain/: models.py
app/infrastructure/dependencies/: container.py
app/infrastructure/presentation/fastapi/: app.py  endpoints.py  schema.py
test/unit/: test_user_model.py
